feat: accordion block

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,6 +56,11 @@ body,
 }
 /* stylelint-enable selector-id-pattern */
 
+::selection {
+  color: white;
+  background: black;
+}
+
 body {
   background-color: theme('colors.white');
   font-family: theme('fontFamily.sans');
