--- a/src/components/sanity/blocks/block.module.css
+++ b/src/components/sanity/blocks/block.module.css
@@ -1,44 +1,9 @@
 .block {
+  @apply pt-y;
   position: relative;
   z-index: 2;
 }
 
-.block::before {
-  bottom: 100%;
-  z-index: 3;
-}
-
-.block::after {
-  top: 100%;
-  transform: scaleY(-1);
-  z-index: 2;
-}
-
-.block:first-child::before {
-  display: none;
-}
-
-.block:last-child::after {
-  display: none;
-}
-
-/* figure */
-.block :global(.figure) {
-  opacity: 0;
-  transition: opacity var(--speed-block) ease-in-out var(--speed-block);
-}
-
-.visible :global(.figure) {
-  opacity: 1;
-}
-
-/* misc content (visible last) */
-.block :global(.block-content) {
-  opacity: 0;
-  transition: opacity var(--speed-fast) ease-in-out var(--speed-block);
-  will-change: opacity;
-}
-
-.visible :global(.block-content) {
-  opacity: 1;
+.block:first-of-type {
+  @apply pt-0;
 }
