--- a/src/components/sanity/blocks/block.module.css
+++ b/src/components/sanity/blocks/block.module.css
@@ -1,9 +1,15 @@
 .block {
-  @apply pt-y;
+  @apply mt-ylg;
   position: relative;
   z-index: 2;
 }
 
 .block:first-of-type {
-  @apply pt-0;
+  @apply mt-0;
+}
+
+@screen md {
+  .block {
+    @apply mt-y;
+  }
 }
