--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,7 @@
 
 @import url('./reset.css');
 @import url('./globals.css');
+@import url('./input.css');
 
 @layer utilities {
   @import url('./rich-text.css');
