feat: property WIP and started units

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,6 +58,10 @@ body,
 }
 /* stylelint-enable selector-id-pattern */
 
+html {
+  overflow: scroll !important;
+}
+
 ::selection {
   color: white;
   background: black;
