--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,3 +91,13 @@ body {
   position: relative;
   z-index: theme('zIndex.modal');
 }
+
+.intercom-lightweight-app-launcher {
+  right: 0.625rem !important;
+}
+
+@media (min-width: 768px) {
+  .intercom-lightweight-app-launcher {
+    right: 2.5rem !important;
+  }
+}
