--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -12,6 +12,7 @@ input[type='checkbox']:active {
   display: inline-block;
   border: 1px solid #000;
   border-radius: 0;
+  background: white;
   box-shadow: none;
   top: 0.2em;
   left: 0.3em;
