test: remove rounded border iOs

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,5 +1,5 @@
 .input {
-  @apply outline-none border-black bg-transparent placeholder:opacity-[36] px-4 py-2 h-12 w-full;
+  @apply outline-none border-black bg-transparent placeholder:opacity-[36] px-4 py-2 h-12 w-full rounded-none;
 }
 
 input[type='checkbox'],
