--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,3 +9,13 @@
 @layer utilities {
   @import url('./rich-text.css');
 }
+
+.desktop-landing {
+  font-size: 2.9vw;
+  line-height: 120%;
+}
+
+.mobile-landing {
+  font-size: 3.9vh;
+  line-height: 120%;
+}
