--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,11 +11,16 @@
 }
 
 .desktop-landing {
-  font-size: 2.9vw;
-  line-height: 120%;
 }
 
 .mobile-landing {
   font-size: 4.5vh;
   line-height: 120%;
+}
+
+@media only screen and (min-width: 768px) {
+  .mobile-landing {
+    font-size: 2.8vw;
+    line-height: 120%;
+  }
 }
