--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,9 +10,6 @@
   @import url('./rich-text.css');
 }
 
-.desktop-landing {
-}
-
 .mobile-landing {
   font-size: 4.5vh;
   line-height: 120%;
@@ -20,7 +17,11 @@
 
 @media only screen and (min-width: 768px) {
   .mobile-landing {
-    font-size: 2.8vw;
+    font-size: 2.6vw;
     line-height: 120%;
+  }
+  .home-svg {
+    max-width: 4vw;
+    width: 3vw;
   }
 }
