feat: single pane form, multi pane form

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,7 @@
   --input-size: 2.5em;
 
   /* buttons */
-  --btn-height: 2.875em;
+  --btn-height: 42px;
   --btn-space-x: 2em;
   --btn-space-y: 0.625em;
 
