--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -29,14 +29,36 @@ input[type='checkbox']:checked {
   background: black;
 }
 
+input[type='checkbox'].unit-checkbox {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  margin: 0;
+  z-index: 0;
+}
+
+input[type='checkbox']:checked + .checkbox-label {
+  color: theme('colors.white');
+}
+
 @screen md {
   input[type='checkbox'],
   input[type='checkbox']:focus,
   input[type='checkbox']:active {
-    left: 12px;
+    left: 0;
     width: 1rem;
     height: 1rem;
     padding: 0.3em;
-    margin-left: 2px;
+    margin-right: 0.8em;
+  }
+
+  input[type='checkbox'].unit-checkbox {
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    margin: 0;
   }
 }
