--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -4,7 +4,10 @@
 
 input[type='checkbox'],
 input[type='checkbox']:focus,
-input[type='checkbox']:active {
+input[type='checkbox']:active,
+input[type='radio'],
+input[type='radio']:focus,
+input[type='radio']:active {
   -webkit-appearance: none;
   width: 16px;
   height: 16px;
@@ -18,14 +21,16 @@ input[type='checkbox']:active {
   left: 0.3em;
   padding: 0.3em;
   position: relative;
-  margin-right: 0.3em;
+  margin-right: 0.8em;
 }
 
-input[type='checkbox']:checked:before {
+input[type='checkbox']:checked:before,
+input[type='radio']:checked:before {
   top: 1px;
 }
 
-input[type='checkbox']:checked {
+input[type='checkbox']:checked,
+input[type='radio']:checked {
   background: black;
 }
 
@@ -46,12 +51,14 @@ input[type='checkbox']:checked + .checkbox-label {
 @screen md {
   input[type='checkbox'],
   input[type='checkbox']:focus,
-  input[type='checkbox']:active {
+  input[type='checkbox']:active,
+  input[type='radio'],
+  input[type='radio']:focus,
+  input[type='radio']:active {
     left: 0;
     width: 1rem;
     height: 1rem;
     padding: 0.3em;
-    margin-right: 0.8em;
   }
 
   input[type='checkbox'].unit-checkbox {
