--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -36,16 +36,8 @@ input[type='radio']:checked {
 
 input[type='checkbox'].unit-checkbox {
   position: absolute;
-  width: 100%;
-  height: 100%;
   left: 0;
-  top: 0;
-  margin: 0;
-  z-index: 0;
-}
-
-input[type='checkbox']:checked + .checkbox-label {
-  color: theme('colors.white');
+  top: 18px;
 }
 
 @screen md {
@@ -59,13 +51,5 @@ input[type='checkbox']:checked + .checkbox-label {
     width: 1rem;
     height: 1rem;
     padding: 0.3em;
-  }
-
-  input[type='checkbox'].unit-checkbox {
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    margin: 0;
   }
 }
