--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,3 +1,8 @@
+fieldset {
+  outline: none;
+  border: none;
+}
+
 .input {
   @apply outline-none border-black bg-transparent placeholder:opacity-[36] px-4 py-2 h-10 w-full rounded-none;
 }
