--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,9 +57,12 @@ html,
 body,
 #__next {
   height: 100%;
-  overflow-x: hidden;
 }
 /* stylelint-enable selector-id-pattern */
+
+article {
+  overflow-x: hidden;
+}
 
 ::selection {
   color: white;
