--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,6 +86,7 @@ body {
   font-size: theme('fontSize.base');
   text-rendering: optimizeLegibility;
   min-width: 320px;
+  overscroll-behavior-y: none;
 }
 
 .chakra-portal {
