--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,6 +53,34 @@
   }
 }
 
+@font-face {
+  font-family: 'Haas Grot Display';
+  src: url('../../public/fonts/haas-grot-display/HaasGrotDisp-regular.woff2')
+    format('woff2');
+}
+
+@font-face {
+  font-family: 'Haas Grot Display';
+  font-style: italic;
+  src: url('../../public/fonts/haas-grot-display/HaasGrotDisp-regular-italic.woff2')
+    format('woff2');
+}
+
+@font-face {
+  font-family: 'Haas Grot Display';
+  font-weight: bold;
+  src: url('../../public/fonts/haas-grot-display/HaasGrotDisp-medium.woff2')
+    format('woff2');
+}
+
+@font-face {
+  font-family: 'Haas Grot Display';
+  font-style: italic;
+  font-weight: bold;
+  src: url('../../public/fonts/haas-grot-display/HaasGrotDisp-medium-italic.woff2')
+    format('woff2');
+}
+
 /* stylelint-disable selector-id-pattern */
 html,
 body,
@@ -85,6 +113,7 @@ body {
   font-family: theme('fontFamily.sans');
   font-size: theme('fontSize.base');
   text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
   min-width: 320px;
   overscroll-behavior-y: none;
 }
