feat: landing type updates

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,33 +54,33 @@
 }
 
 @font-face {
-  font-family: 'Haas Grot Display';
-  src: url('../../public/fonts/haas-grot-display/HaasGrotDisp-regular.woff2')
+  font-family: 'Haas Grot';
+  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-55Roman.woff2')
     format('woff2');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Haas Grot Display';
+  font-family: 'Haas Grot';
   font-style: italic;
-  src: url('../../public/fonts/haas-grot-display/HaasGrotDisp-regular-italic.woff2')
+  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-56Italic.woff2')
     format('woff2');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Haas Grot Display';
+  font-family: 'Haas Grot';
   font-weight: bold;
-  src: url('../../public/fonts/haas-grot-display/HaasGrotDisp-medium.woff2')
+  src: url('../../public/fonts/haas-grot/HaasGrotDisp-medium.woff2')
     format('woff2');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Haas Grot Display';
+  font-family: 'Haas Grot';
   font-style: italic;
   font-weight: bold;
-  src: url('../../public/fonts/haas-grot-display/HaasGrotDisp-medium-italic.woff2')
+  src: url('../../public/fonts/haas-grot/HaasGrotDisp-medium-italic.woff2')
     format('woff2');
   font-display: swap;
 }
