feat: design tweaks

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,6 +78,15 @@
 
 @font-face {
   font-family: 'Haas Grot';
+  font-style: italic;
+  font-weight: 500;
+  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-66MediumItalic.woff2')
+    format('woff2');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Haas Grot';
   font-weight: bold;
   src: url('../../public/fonts/haas-grot/NeueHaasGrotDisp-75Bold.woff2')
     format('woff2');
