--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -52,7 +52,8 @@ input[type='checkbox'].unit-checkbox {
   input[type='radio'],
   input[type='radio']:focus,
   input[type='radio']:active {
-    left: 0;
+    left: 4px;
+    margin-right: 1em;
     width: 1rem;
     height: 1rem;
     padding: 0.3em;
