--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -178,6 +178,10 @@ body {
   opacity: 0.4;
 }
 
+.hide-cta .cta {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .intercom-lightweight-app-launcher {
     right: 2.5rem !important;
