--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -174,6 +174,11 @@ body {
   align-items: center;
 }
 
+.swiper-prev,
+.swiper-next {
+  @apply transition-opacity duration-200;
+}
+
 .swiper-button-disabled {
   opacity: 0;
 }
