--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -142,6 +142,12 @@ body {
   -webkit-font-smoothing: antialiased;
   min-width: 320px;
   overscroll-behavior-y: none;
+  font-feature-settings: 'cpsp' on, 'case' on;
+}
+
+header,
+footer {
+  font-feature-settings: 'case' on;
 }
 
 /* 3rd party styling */
