feat: new form layouts

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -12,7 +12,8 @@ textarea {
 }
 
 .input.waitlist {
-  @apply w-full md:w-btnWidth;
+  @apply w-full;
+  max-width: var(--btn-width);
 }
 
 input[type='checkbox'],
