--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -108,6 +108,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Haas Grot Text';
+  font-weight: bold;
+  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-75Bold.woff2')
+    format('woff2');
+  font-display: swap;
+}
+
 /* stylelint-disable selector-id-pattern */
 html,
 body,
