--- a/src/styles/rich-text.css
+++ b/src/styles/rich-text.css
@@ -48,7 +48,7 @@
 }
 
 .rich-text h1 {
-  @apply text-xl md:text-2xl font-bold uppercase tracking-header;
+  @apply text-2xl font-bold uppercase tracking-header;
 }
 
 .rich-text h2 {
