--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -12,8 +12,7 @@ textarea {
 }
 
 .input.waitlist {
-  @apply w-full;
-  max-width: var(--btn-width);
+  @apply w-full md:max-w-[var(--btn-width)];
 }
 
 input[type='checkbox'],
