fix: updated carousel zoom arrows

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -179,6 +179,10 @@ footer {
   display: none !important;
 }
 
+.pswp--has_mouse .pswp__button--arrow {
+  overflow: visible;
+}
+
 .swiper-container {
   width: 100%;
   height: 100%;
