--- a/src/styles/rich-text.css
+++ b/src/styles/rich-text.css
@@ -104,6 +104,7 @@
   @apply font-normal text-xs tracking-tight;
   border: none;
   padding-left: 0;
+  break-inside: avoid;
 }
 
 .rich-text li:last-of-type {
