--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -215,10 +215,10 @@ footer {
 }
 
 .white-gradient {
-  background: linear-gradient(
+  background-image: linear-gradient(
     180deg,
-    #fff 0%,
-    #fff 90%,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 90%,
     rgba(255, 255, 255, 0) 100%
   );
 }
