--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
   --space-x-half: calc(var(--space-x) * 0.5);
   --space-x-double: calc(var(--space-x) * 2);
   --space-x-lg: 2rem;
-  --space-y: 1.3rem;
+  --space-y: 16px;
   --space-y-quarter: calc(var(--space-y) * 0.25);
   --space-y-half: calc(var(--space-y) * 0.5);
   --space-y-double: calc(var(--space-y) * 2);
@@ -46,7 +46,6 @@
 @screen md {
   :root {
     --space-x: 2.5rem;
-    --space-y: 2.5rem;
 
     --space-block: 150px;
     --btn-width: 358px;
