--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -185,6 +185,10 @@ footer {
   height: 100%;
 }
 
+.swiper-wrapper {
+  align-items: center;
+}
+
 .swiper-slide {
   display: flex;
   justify-content: center;
