--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -8,11 +8,11 @@ textarea {
 }
 
 .input {
-  @apply h-btn border-black font-medium text-xs bg-white placeholder:opacity-100 placeholder:text-black px-[calc(var(--space-x)-1px)] py-2 w-full rounded-none placeholder:uppercase;
+  @apply h-btn border-black font-bold tracking-normal text-xs bg-white placeholder:opacity-100 placeholder:text-black px-[calc(var(--space-x)-1px)] py-2 w-full rounded-none placeholder:uppercase;
 }
 
 .input.waitlist {
-  @apply w-full md:max-w-[var(--btn-width)];
+  @apply w-full md:max-w-[var(--btn-width)] tracking-normal font-sansText;
 }
 
 input[type='checkbox'],
