--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -154,7 +154,7 @@ body {
 
 header,
 footer {
-  font-feature-settings: 'case' on;
+  font-feature-settings: 'cpsp' on, 'case' on;
 }
 
 /* 3rd party styling */
