--- a/src/styles/rich-text.css
+++ b/src/styles/rich-text.css
@@ -17,8 +17,7 @@
 .rich-text > h1,
 .rich-text > h2,
 .rich-text > h3,
-.rich-text > h4,
-.rich-text > p.large {
+.rich-text > h4 {
   margin-top: var(--space-y-double);
 }
 
