fix: update input font weight

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -4,7 +4,7 @@ fieldset {
 }
 
 textarea {
-  @apply placeholder:opacity-100 placeholder:text-black font-bold font-sansText;
+  @apply placeholder:opacity-100 placeholder:text-black font-medium;
 }
 
 .select {
@@ -12,11 +12,11 @@ textarea {
 }
 
 .input {
-  @apply h-btn border-black font-bold font-sansText tracking-normal text-xs bg-white placeholder:opacity-100 placeholder:text-black px-[calc(var(--space-x)-1px)] py-2 w-full rounded-none placeholder:uppercase;
+  @apply h-btn border-black font-medium tracking-normal text-xs bg-white placeholder:opacity-100 placeholder:text-black px-[calc(var(--space-x)-1px)] py-2 w-full rounded-none placeholder:uppercase;
 }
 
 .input.waitlist {
-  @apply w-full md:max-w-[var(--btn-width)] tracking-normal font-sansText;
+  @apply w-full md:max-w-[var(--btn-width)] tracking-normal;
 }
 
 .input.brand {
