--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -15,6 +15,10 @@ textarea {
   @apply h-btn border-black font-medium tracking-normal text-xs bg-white placeholder:opacity-100 placeholder:text-black px-[calc(var(--space-x)-1px)] py-2 w-full rounded-none placeholder:uppercase;
 }
 
+.PhoneInputInput {
+  @apply h-btn border-none font-medium tracking-normal text-xs bg-transparent placeholder:opacity-100 placeholder:text-black px-[calc(var(--space-x)-1px)] py-2 w-full rounded-none placeholder:uppercase;
+}
+
 .input.waitlist {
   @apply w-full md:max-w-[var(--btn-width)] tracking-normal;
 }
