feat: added caption size

--- a/src/styles/rich-text.css
+++ b/src/styles/rich-text.css
@@ -97,6 +97,10 @@
   @apply text-md font-medium;
 }
 
+.rich-text p.caption {
+  @apply font-sansText text-caption font-bold;
+}
+
 .rich-text p.small {
   @apply font-sansText text-xs font-bold;
 }
