--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,7 +51,7 @@
     --header-height: 80px;
     --gradient-height: 90px;
 
-    --space-menu: 5.625rem;
+    --space-menu: 155px;
     --space-full-menu: 12rem;
     --space-page: var(--header-height);
   }
