--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@
   --space-y-half: calc(var(--space-y) * 0.5);
   --space-y-double: calc(var(--space-y) * 2);
   --space-y-lg: 2.5rem;
+  --space-y-quad: calc(var(--space-y) * 4);
 
   --space-menu: 3.625rem;
   --space-page: 88px;
