feat: new font files adjusted

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -103,18 +103,17 @@
 }
 
 @font-face {
-  font-family: 'Haas Grot';
+  font-family: 'Haas Grot Display';
   font-weight: bold;
-  src: url('../../public/fonts/haas-grot/NeueHaasGrotDisp-75Bold.woff2')
+  src: url('../../public/fonts/haas-grot/HaasGrotDisp-75Bold.woff2')
     format('woff2');
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Haas Grot';
-  font-style: italic;
   font-weight: bold;
-  src: url('../../public/fonts/haas-grot/NeueHaasGrotDisp-76BoldItalic.woff2')
+  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-75Bold.woff2')
     format('woff2');
   font-display: swap;
 }
